src/styles/home.module.scss
@import 'mixins';
@import './variables';

/* For tablets and smaller screened laptops */
@media only screen and (max-width: 1250px) {
    h1, h2, h3, h4, h5, p {
        font-size: 1.25em;
    }

    .opening-message-container::after {
        bottom: -2.5% !important;
    }

    .first-opening-phrase,
    .second-opening-phrase {
        font-size: 4em !important;
        animation-name: fade-in !important;
        animation-duration: 400ms;
        animation-fill-mode: forwards;
        text-align: center !important;
    }

    .first-opening-phrase {
        margin-top: -1em !important;
    }

    .sub-heading-text-styles {
        text-align: center;
        
        h4 {
            margin: 0 auto;
        }
    }

    .service-cards-layout {
        @include responsive-flex-box;
        margin: auto 2em;
        margin-top: -8em !important;
        margin-bottom: 2em !important;
    }

    .service-card {
        h5, p {
            font-size: 1.15em !important;
        }
    }

    .portfolio-heading-container {
        min-height: 15vh !important;
    }

    .portfolio-gallery {
        @include responsive-flex-box;
    }

    .portfolio-item {
        flex-basis: 50% !important;
    }

    .heading-container {
        min-height: 15vh !important;
    }

    .content-container {
        min-height: 50vh !important;
        iframe {
            min-height: 60vh !important;
        }
    }
}

/* For mobile phones */
@media only screen and (max-width: 600px) {
    * {
        font-size: 1em;
    }

    .first-opening-phrase, .second-opening-phrase {
        font-size: 1.5em !important;
    }

    .opening-message-container::after {
        bottom: -5% !important;
    }

    .parallax {
        background-attachment: inherit !important;
    }

    .about-container, .services-container, .sub-heading-text-styles {
        padding: .1rem .25rem !important;
    }
    
    div {
        div:nth-child(3) {
            p.motto {
               text-align: center;
               margin: 1em !important;
               margin-bottom: 10em !important;
            } 
        }
    }

    .sub-heading-text-styles {
        h4 {
            padding-left: .15rem;
            padding-right: .15rem;
            padding-bottom: 2rem;
        }
    }

    .service-cards-layout {
        row-gap: 2.5em !important;
        margin: 6em 1em !important;
        margin-top: -6em !important;
    }

    .portfolio-heading-container {
        min-height: 25vh !important;

        div {
            p {
                font-size: 1em;
            }
        }
    }

    .portfolio-item-title, .portfolio-item-location {
        text-align: center;   
    }

    .heading-container {
        min-height: 20vh !important;
        
        h3 {
            font-size: 1.75em;
        }
    }

    div {
        p {
            width: 90%;
            margin: 0 auto;
            text-align: center;
        }
    }

    .portfolio-item {
        flex-basis: 100% !important;
    }

    .content-container {
        min-height: 115vh !important;
        iframe {
            min-height: 125vh !important;
        }
    }
}

h1, h2, h3, h4, h5, p {
    max-width: 60ch;
}

.opening-image {
    position: absolute;
    z-index: -10;
    object-fit: cover;
    height: 100vh;
    filter: brightness(75%);
}

.parallax {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background-image: url('../assets/images/work_makes_better_futures.jpg');
    background-size: 100% 100%;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.opening-message-container {
    position: relative;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    z-index: 10;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.opening-message-container::after {
    position: absolute;
    content: '';
    width: 110%;
    height: 50px;
    background: white;
    bottom: -4.5%;
    transform: rotate(-1.5deg);
}

.content-container {
    min-height: 100vh;
}

.about-container {
    min-height: 50vh;
    padding-top: 2em;
}

.blurb-layout {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 4rem;
}

.services-container {
    min-height: 40vh;
}

.service-cards-layout {
    @include responsive-grid(350px);
    justify-items: center;
    margin: 10em 5em 10em;
    row-gap: 1em;
    margin-top: 2em;
}

.service-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    min-height: 40vh;

    h5 {
        margin-top: 2em;
        text-align: center;
        font-weight: bold;
    }

    p {
        max-width: 40ch;
        text-align: center;
        font-size: .9em;
    }
}

.service-card-image {
    float: left;
    height: 175px;
    width: 175px;
    object-fit: cover;
}

.portfolio-heading-container {
    @include portfolio-heading-style(.5rem);
}

.portfolio-gallery {
    @include responsive-flex-box;
    background-color: #ddd;
}

.portfolio-item {
    flex-basis: 33.333%;
    position: relative;
    width: 100%;
}

.portfolio-item-image {
    display: block;
    width: 100%;
}

.portfolio-item-image-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0 , 0, 0.6);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 250ms;

    & > * {
        transform: translateY(20px);
        transition: transform 250ms;
    }

    &:hover > * {
        transform: translateY(0);
    }

    &:hover {
        opacity: 1;
    }

    h4, p {
        color: white;
    }

    h4 {
        letter-spacing: .2rem;
    }
}

.portfolio-item-title {
    font-size: 1.5em;
    font-weight: bold;
}

.portfolio-item-location {
    font-size: 1em;
    margin-top: .25em;
}

.heading-container {
    @include center-in-div;
    min-height: 25vh;
    background-color: $header-background-colour;
}

.decorative-line {
    @include hr-line((to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)));
}

.first-opening-phrase {
    @include attention-text-large;
    animation-name: fade-in-from-left;
    animation-duration: 900ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
    max-width: 20ch;
    text-align: right;
    letter-spacing: .2rem;
}

.second-opening-phrase {
    @include attention-text-large;
    animation-name: fade-in-from-right;
    animation-duration: 900ms;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
    animation-delay: 1000ms;
    opacity: 0;
    max-width: 20ch;
    text-align: left;
    letter-spacing: .2rem;
}

.heading {
    letter-spacing: .25em;
    text-align: center;
    font-weight: bold;
    font-size: 2.25em;
    padding: 2rem;
}

.sub-heading-text-styles {
    text-align: center;

    h3 {
        color: $font-highlight-colour;
        font-weight: bold;
    }

    h4 {
        letter-spacing: .4rem;
        text-align: center;
        margin: 0 auto;
    }

    hr {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }
}

div {
    div:nth-child(3) {
        p.motto {
           text-align: center;
           margin: 2rem;
           margin-bottom: 10em;
        } 
    }
}

.form-placement {
    position: absolute;
    margin-top: 5%;
    margin-left: 5%;
}

.map {
    position: relative;
    width: 100vw;
    min-height: 100vh;
    justify-self: center;
    z-index: -5;
    border: 0;
}

@keyframes fade-in-from-left {
    0% {
        opacity: 0;
        margin-left: -75%;
    }

    100% {
        opacity: 1;
        margin-left: -35%;
    }
}

@keyframes fade-in-from-right {
    0% {
        opacity: 0;
        margin-right: -75%;
    }

    100% {
        opacity: 1;
        margin-right: -30%;
    }
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

